/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'java'
//    id "org.beryx.jlink" version "3.0.1"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.3.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '3.3.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.3.2'

    //implementation group: 'org.springframework', name: 'spring-context', version: '6.1.6'
    implementation group: 'org.apache.dubbo', name: 'dubbo', version: '3.3.0-beta.4'
    // implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    // implementation 'org.junit.platform:junit-platform-engine:1.8.2'
    // api 'org.junit.platform:junit-platform-runner:1.8.2'
    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
    implementation 'org.jsoup:jsoup:1.11.3'
    implementation 'io.projectreactor:reactor-core:3.2.3.RELEASE'
    implementation 'cglib:cglib:3.2.10'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'com.deepoove:poi-tl:1.10.0'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
    implementation 'org.jetbrains.kotlin:kotlin-test:1.6.0'
    implementation 'com.alibaba:fastjson:1.2.75'
    implementation 'org.apache.velocity:velocity-engine-core:2.3'
    implementation 'org.apache.velocity.tools:velocity-tools-generic:3.1'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
    implementation 'io.netty:netty-all:4.1.73.Final'
    implementation 'one.util:streamex:0.8.1'
    implementation 'org.jooq:jool:0.9.14'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.antlr:antlr4-runtime:4.10.1'
    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
    implementation 'io.vavr:vavr:1.0.0-alpha-4'
    implementation 'com.google.code.gson:gson:2.9.1'
    implementation 'com.googlecode.aviator:aviator:5.3.3'
    implementation 'org.javassist:javassist:3.30.2-GA'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'org.glassfish.expressly:expressly:5.0.0'
    implementation group: 'com.google.googlejavaformat', name: 'google-java-format', version: '1.22.0'
    // testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
    // testImplementation 'org.junit.platform:junit-platform-console-standalone:1.8.2'
    implementation group: 'cn.hutool', name: 'hutool-all', version: '5.8.29'
    implementation 'fr.inria.gforge.spoon:spoon-core:11.0.1-beta-17'
    // implementation 'fr.inria.gforge.spoon:spoon-core:10.0.0'
    implementation 'com.github.javaparser:javaparser-core:3.26.1'
    implementation 'org.springframework.security:spring-security-crypto:6.3.3'


}

group = 'groupId'
version = '1.0-SNAPSHOT'
description = 'DataStructure'
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // Replace 17 with the version you installed
    }
}

//publishing {
//    publications {
//        maven(MavenPublication) {
//            from(components.java)
//        }
//    }
//}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.compilerArgs += ['--enable-preview',
                                "-parameters",
                                "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                                "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                                "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                                "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                                "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
}
tasks.withType(JavaExec).configureEach {
    jvmArgs = ['--enable-preview', '-Xmx512m', '-Dfile.encoding=UTF-8', '-Dsun.stdout.encoding=UTF-8', '-Dsun.stderr.encoding=UTF-8']
}
test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

task createRuntime(type: Exec) {
    doFirst {
        delete "$layout.projectDirectory/runtime"
    }

    commandLine 'jlink',
            '--add-modules', 'java.base,java.desktop,java.logging,java.scripting,java.xml.bind',
            '--bind-services',
            '--no-header-files',
            '--no-man-pages',
            '--compress=2',
            '--strip-debug',
            '--output', "$layout.projectDirectory/runtime"
}

//task wrapper(type: Wrapper) {
//    gradleVersion = '8.7'
//}

//tasks.withType(JavaCompile) {
//    options.compilerArgs += "--enable-preview"
//}
//
//tasks.withType(Test) {
//    jvmArgs += "--enable-preview"
//}
//
//tasks.withType(JavaExec) {
//    jvmArgs += '--enable-preview'
//}

//
//compileJava {
//    options.compilerArgs += ["--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
//                             "--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
//                             "--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
//                             "--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
//                             " --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
//}